# facebook-app-testing

./: .env  CLAUDE.md  README.md  cerrar_sesion.xml  configuracion.xml  conftest.py  debug_after_back.xml  debug_after_login.py  debug_after_login.xml  debug_dump.py  debug_login.py  debug_login2.py  debug_login3.py  debug_recovery.xml  google_password_modal.xml  guardar_info.xml  guardar_info_init_session.xml  login.xml  main.py  main_fb.xml  messages_fb.xml  notifications_fb.xml  page_source.xml  perfil_fb.xml  pyproject.toml  run_tests_one_by_one.ps1  screen_encuentra cuenta.xml  screen_iniciar_sesion_otra_cuenta.xml  screen_iniciar_sesion_otra_cuenta_02.xml  screen_login.xml  screen_olvide_contrasena.xml  uidump.xml  uidump2.xml  ultimo.xml
pages/: base_page.py  login_page.py  messenger_page.py  notifications_page.py
pages_web/: base_page_web.py  login_page_web.py  messenger_page_web.py  notifications_page_web.py
reports/: report.html  report_auth_001_mobile.html  report_completo.html  report_messaging.html  report_web.html  tc002_run.txt  tc002_run2.txt  tc002_run3.txt  tc002_run4.txt
reports/screenshots/: DEBUG_login_after_email_20260616_001854.xml  DEBUG_login_after_email_20260616_004238.xml  DEBUG_login_after_email_20260616_005116.xml  DEBUG_login_after_email_20260616_005402.xml  (+146 more)
tests/: conftest.py  test_auth.py  test_messaging.py  test_notifications.py
tests_web/: conftest.py  fb_session.json  helpers.py  test_auth_web.py  test_messaging_web.py  test_notifications_web.py
utils/: cookie_manager.py  driver_factory.py  web_driver_factory.py
(+2 files in other folders)
